fixed font spacing issue

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: helvetica,arial,sans-serif;
+    font-size: 150%;
 }
 
 header {
@@ -18,6 +19,7 @@ li {
     list-style: none;
     margin: 0 !important;
     padding: 0 !important;
+    padding-left: 12px !important;
 }
 
 section {
@@ -25,7 +27,3 @@ section {
     margin-right: 2% !important;
 }
 
-.taskText {
-    height: 15px;
-    width: 15px;
-}
